Add social image

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Experience OpenAI API with this simple web application"
     />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
