--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Experience OpenAI API with this simple web application"
+      content="Задайте своите въпроси на АИ асистентът на НАП. Заповядайте в 21в."
     />
     <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo.png" />
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ChatGPT Web Application</title>
+    <title>ИИ Асистентът на НАП</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
